// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginStyles AppPrez should renders with correct styles 1`] = `
.emotion-0 {
  font-size: 1rem;
  font-weight: 300;
  font-style: italic;
}

<p
  className="emotion-0"
/>
`;

exports[`LoginStyles AppTitle should renders with correct styles 1`] = `
.emotion-0 {
  font-size: 1.5rem;
  font-weight: 700;
  margin-bottom: 1rem;
}

<h1
  className="emotion-0"
/>
`;

exports[`LoginStyles DescInput should renders with correct styles 1`] = `
.emotion-0 {
  width: 100%;
  position: absolute;
  top: -1.5rem;
  left: 2.5rem;
  color: #fff;
}

<p
  className="emotion-0"
/>
`;

exports[`LoginStyles FieldContainer should renders with correct styles 1`] = `
.emotion-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto 0;
  position: relative;
}

<div
  className="emotion-0"
/>
`;

exports[`LoginStyles Input should renders with correct styles 1`] = `
.emotion-0 {
  width: 100%;
  border: none;
  border-bottom: 2px solid #111;
  background: none;
}

<input
  className="emotion-0"
/>
`;

exports[`LoginStyles LoginContainer should renders with correct styles 1`] = `
.emotion-0 {
  width: 40%;
  height: 50vh;
  background-color: white;
  opacity: 100%;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-0"
/>
`;

exports[`LoginStyles LoginForm should renders with correct styles 1`] = `
.emotion-0 {
  width: 40%;
  min-height: 150px;
  height: 40%;
  margin-left: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0"
/>
`;

exports[`LoginStyles LogoContainer should renders with correct styles 1`] = `
.emotion-0 {
  width: 60%;
  height: 50vh;
  background: #111;
  opacity: 100%;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="emotion-0"
/>
`;

exports[`LoginStyles LogoLV should renders with correct styles 1`] = `
.emotion-0 {
  width: 30vh;
  height: 30vh;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 12rem;
}

<img
  className="emotion-0"
/>
`;

exports[`LoginStyles MainLoginContainer should renders with correct styles 1`] = `
.emotion-0 {
  width: 100%;
  height: 50vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
  className="emotion-0"
/>
`;

exports[`LoginStyles PrezContrainer should renders with correct styles 1`] = `
.emotion-0 {
  min-width: 20vh;
  max-width: 40vh;
  margin-top: 1rem;
  margin-left: 1rem;
  color: #fff;
}

<div
  className="emotion-0"
/>
`;
